# Jet

./: .gitignore  .npmrc  AGENTS.md  ANIMATIONS.md  GIT.md  README.md  TODO.md  bin.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
.gharargah/agents/: index.json
.github/workflows/: ci.yml
apps/gharargah/: package.json  tsconfig.json  vite.config.ts
apps/jet-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/jet-tauri/src-tauri/capabilities/: default.json
apps/jet-tauri/src-tauri/icons/: icon.icns
apps/jet-tauri/src-tauri/src/: lib.rs  main.rs  shell.rs
apps/jet-tauri/src-tauri/src/host/: agents.rs  events.rs  fff_service.rs  fs.rs  launch.rs  lsp.rs  mod.rs  perf.rs  search.rs  terminal.rs  uri.rs  workspace.rs
apps/server/: Cargo.toml
apps/server/src/: app.rs  config.rs  lib.rs  main.rs  persistence.rs  static_files.rs
apps/server/src/host/: acp_client.rs  agents.rs  claude_sdk.rs  codex_app_server.rs  events.rs  fff_service.rs  fs.rs  launch.rs  line_rpc.rs  lsp.rs  mod.rs  perf.rs  search.rs  shell.rs  tasks.rs  terminal.rs  uri.rs  workspace.rs
apps/server/src/host/acp/: bounds.rs  connection_pool.rs  cursor_ext.rs  event_pipeline.rs  fs_handler.rs  mcp_bridge.rs  mod.rs  mode_resolve.rs  path_security.rs  profiles.rs  redaction.rs  runtime_client.rs  session_runtime.rs  supervisor.rs  terminal_handler.rs  trace.rs  types.rs
apps/server/src/host/acp/reducers/: connection.rs  mod.rs  permission.rs  plan.rs  tool_call.rs  usage.rs
apps/server/src/mock_acp/: cli.rs  mod.rs  scenarios.rs
apps/server/tests/: acp_phase14_runtime.rs  acp_real_cursor.rs  acp_real_opencode.rs  acp_supervisor_mock.rs  claude_sdk_protocol.rs  claude_sdk_transport.rs  codex_app_server_protocol.rs  codex_app_server_real.rs  line_rpc_transport.rs  mock_acp_echo.rs  mock_acp_scenario_matrix.rs
docs/: UX_REVIEW_2026-07.md  acp-architecture.md  acp-audit.md  acp-debugging.md  acp-mock-scenarios.md  acp-provider-compatibility.md  acp-security.md  acp-support-matrix.md  tauri-migration-inventory.md
plans/: 001-tauri-verification.md  002-tauri-startup.md  003-tauri-host-efficiency.md  004-premium-motion.md  005-electron-retirement.md  README.md
scripts/: build-web-binary.mjs  cursor_acp_probe.py  ensure-electron.mjs  extract-vscode-mac-keybindings.mjs  fix-node-pty-perms.mjs  generate-default-keybindings.mjs  validate-gharargah-keybindings.mjs  validate-jet-keybindings.mjs
test-results/: .last-run.json
tests/: README.md
(+308 files in other folders)
