[package]
name = "jet"
version = "0.1.0"
description = "Jet single-binary web application"
authors = ["Gharargah"]
edition = "2021"

[lib]
name = "jet_server"
path = "src/lib.rs"

[[bin]]
name = "jet"
path = "src/main.rs"

[dependencies]
agent-client-protocol = "1.2"
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
fff-search = "0.9.6"
futures-util = "0.3"
http = "1"
mime_guess = "2"
notify = "6"
open = "5"
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
toml = "0.8"
tower-http = { version = "0.6", features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.24"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
