[package]
name = "jet-tauri"
version = "0.0.1"
description = "Jet editor — Tauri shell"
authors = ["Jet"]
edition = "2021"

[lib]
name = "jet_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
e2e = ["dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
notify = "6"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tungstenite = "0.24"
url = "2"
fff-search = "0.9.6"
sha2 = "0.10"
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
